# aircloudy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
aircloudy/: __init__.py  aircloud.py  contants.py  errors.py  interior_unit.py  interior_unit_base.py  interior_unit_changes.py  interior_unit_models.py  utils.py
aircloudy/api/: __init__.py  auth_manager.py  command_manager.py  command_state_monitor.py  common.py  http_client.py  http_client_models.py  iam.py  iam_models.py  rac.py  rac_models.py
aircloudy/notifications/: __init__.py  hitachi_frame_models.py  interior_unit_models.py  notifications_websocket.py
aircloudy/notifications/stomp/: SPEC.txt  __init__.py  frames.py  frames_models.py  frames_server.py  frames_server_models.py
playground/: playground.py
tests/client_rest_api/: conftest.py  test_auth.py  test_command_manager.py  test_command_state_monitor.py  test_interior_unit.py
tests/client_stomp_websocket/: test_client_stomp_websocket.py
